--- a/.env
+++ b/.env
@@ -1,7 +1,9 @@
 # Required
 TMDB_READ_API_KEY=""
+API_PASSWORD=""
 
 # Misc Configs
 DEBUG=false
+ENABLE_PROFILER=false
 ENABLE_IP_GET=true
 SHOW_BANNER=true
