--- a/requirements.txt
+++ b/requirements.txt
@@ -21,10 +21,12 @@ pycparser==2.23
 Pygments==2.19.2
 pyinstrument==5.1.1
 python-dotenv==1.2.1
+RapidFuzz==3.14.3
 rich==14.2.0
 sniffio==1.3.1
 soupsieve==2.8
 starlette==0.50.0
 typing_extensions==4.15.0
+Unidecode==1.4.0
 uvicorn==0.38.0
 yarl==1.22.0
